error_productos.txt
./Tarea_3/Productos.java:13: warning: A refining statement is required for statement specifications
        //@requires nombre.length > 2 && precio >= 0 && cantidad >= 0;
           ^
./Tarea_3/Productos.java:13: error: cannot find symbol
        //@requires nombre.length > 2 && precio >= 0 && cantidad >= 0;
                          ^
  symbol:   variable length
  location: variable nombre of type java.lang.String
1 error
1 warning
